Alla endpoints fungerar med dummy-db
