# docs/swagger.yml
@@ -3,9 +3,15 @@ info:
   title: Swing Notes API
   version: '1.0'
 servers:
-  - url: http://localhost:3000
+  - url: http://localhost:3000/
 
 paths:
+  /:
+    get:
+      summary: TEST
+      responses:
+        200:
+          description: test gick bra
   /api/notes:
     get:
       summary: Hämta anteckningar
@@ -25,6 +31,10 @@ paths:
                   $ref: '#/components/schemas/Note'
         '400':
           description: Felaktig förfrågan
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
 
     post:
       summary: Spara en anteckning
